Add README and icons reminder.

--- a/emacs.org
+++ b/emacs.org
@@ -235,6 +235,8 @@ Present a list of currently open buffers when you split the window.
 
 *** Dashboard
 https://github.com/emacs-dashboard/emacs-dashboard
+
+For the icons to display correctly, I needed to =all-of-the-icons-install-fonts=.
 #+begin_src emacs-lisp
   (recentf-mode 1) ;; needed for recent files in dashboard
 
