flyspell on comments

--- a/emacs.org
+++ b/emacs.org
@@ -406,6 +406,11 @@ Gives warning on startup for login.    [[ https://github.com/emacs-grammarly/lsp
 Future: create my own keybindings as shown [[https://www.youtube.com/watch?v=xaZMwNELaJY][here]]. hydra ties related commands into short bindings with a common prefix.
 
 * Development
+** Flyspell comments
+#+begin_src emacs-lisp
+(add-hook 'prog-mode-hook #'flyspell-prog-mode)
+#+end_src
+
 ** Parens/delimiters
 #+begin_src emacs-lisp
 (show-paren-mode    1) ; Highlight parentheses pairs.
@@ -826,36 +831,38 @@ Faster terminal due to being compiled. Default is a better mode than term-mode; 
 - C-c C-c = send C-c to the terminal (kill running command)
 
 #+begin_src emacs-lisp
-  (use-package vterm
-    :commands vterm
-    :bind (:map vterm-mode-map ("C-o" . other-window))
-    :config
-    ;;(setq term-prompt-regexp "^[^$]*[$] *");; match your custom shell
-    ;;(setq vterm-shell "zsh");; Set this to customize the shell to launch
-    (setq vterm-max-scrollback 10000))
+    (use-package vterm
+      :commands vterm
+      :bind (:map vterm-mode-map ("C-o" . other-window))
+      :config
+      ;;(setq term-prompt-regexp "^[^$]*[$] *");; match your custom shell
+      ;;(setq vterm-shell "zsh");; Set this to customize the shell to launch
+      (setq vterm-max-scrollback 10000))
 
-  (use-package vterm-toggle
-    :ensure t
-    :config
-    (setq vterm-toggle-fullscreen-p nil)
-    (add-to-list 'display-buffer-alist
-                 '((lambda(bufname _) (with-current-buffer bufname (equal major-mode 'vterm-mode)))
-                   (display-buffer-reuse-window display-buffer-at-bottom)
-                   ;;(display-buffer-reuse-window display-buffer-in-direction)
-                   ;;display-buffer-in-direction/direction/dedicated is added in emacs27
-                   ;;(direction . bottom)
-                   ;;(dedicated . t) ;dedicated is supported in emacs27
-                   (reusable-frames . visible)
-                   (window-height . 0.3)))
-    )
+    (use-package vterm-toggle
+      :ensure t
+      :config
+      (setq vterm-toggle-fullscreen-p nil)
+      (add-to-list 'display-buffer-alist
+                   '((lambda(bufname _) (with-current-buffer bufname (equal major-mode 'vterm-mode)))
+                     (display-buffer-reuse-window display-buffer-at-bottom)
+                     ;;(display-buffer-reuse-window display-buffer-in-direction)
+                     ;;display-buffer-in-direction/direction/dedicated is added in emacs27
+                     ;;(direction . bottom)
+                     ;;(dedicated . t) ;dedicated is supported in emacs27
+                     (reusable-frames . visible)
+                     (window-height . 0.3)))
+      )
 
-  ;; (global-unset-key (kbd "C-t"))
-  (global-set-key (kbd "C-t") 'vterm-toggle)
+    ;; (global-unset-key (kbd "C-t"))
+    (global-set-key (kbd "C-t") 'vterm-toggle)
 
 #+end_src
 
-#+RESULTS:
-: vterm-toggle
+
+
+
+
 
 ** shell-mode
 Between term-mode eshell.
@@ -887,4 +894,4 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]].  Could not use "use-packag
 
 * Localwords
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell  Dired dracula clangd ui
-#  LocalWords:  Grammarly workspaces commenter Pyright CMake
+#  LocalWords:  Grammarly workspaces commenter Pyright CMake Flyspell
