reduce displayed warnings further

--- a/emacs.org
+++ b/emacs.org
@@ -4,7 +4,9 @@
 * Setup
 ** Silence Native Compilation Warnings
 #+begin_src emacs-lisp
-(setq comp-async-report-warnings-errors nil)
+  (setq comp-async-report-warnings-errors nil)
+  (setq warning-suppress-log-types 1)
+  (setq warning-suppress-types 1)
 #+end_src
 
 ** Startup Performance
