--- a/emacs.org
+++ b/emacs.org
@@ -110,20 +110,23 @@ You can also use =M-x auto-package-update-now= to update right now!
 
 *** Scrolling
 #+begin_src emacs-lisp
-  (use-package emacs
-    :custom
-    ;; Fully redraw the display before it processes queued input events.
-    (redisplay-dont-pause            t)
-    ;; Number of lines of continuity to retain when scrolling by full screens
-    (next-screen-context-lines       2)
-    ;; only 'jump' when moving this far off the screen
-    (scroll-conservatively       10000)
-    (scroll-step                     1) ;; Keyboard scroll one line at a time
-    (mouse-wheel-progressive-speed nil) ;; Don't accelerate scrolling
-    (mouse-wheel-follow-mouse        t) ;; Scroll window under mouse
-    (fast-but-imprecise-scrolling    t) ;; No (less) lag while scrolling lots.
-    (auto-window-vscroll           nil) ;; Cursor move faster
-    )
+    (use-package emacs
+      :custom
+      ;; Fully redraw the display before it processes queued input events.
+      (redisplay-dont-pause            t)
+
+      ;; Number of lines of continuity to retain when scrolling by full screens
+      ;; (next-screen-context-lines       2)  ;; golden ration pkg replaced this
+
+      ;; only 'jump' when moving this far off the screen
+      (scroll-conservatively       10000)
+      (scroll-step                     1) ;; Keyboard scroll one line at a time
+      (mouse-wheel-progressive-speed nil) ;; Don't accelerate scrolling
+      (mouse-wheel-follow-mouse        t) ;; Scroll window under mouse
+      (fast-but-imprecise-scrolling    t) ;; No (less) lag while scrolling lots.
+      (auto-window-vscroll           nil) ;; Cursor move faster
+      (pixel-scroll-precision-mode     1) ;; pixel based scrolling
+      )
 #+end_src
 
 #+RESULTS:
