--- a/emacs.org
+++ b/emacs.org
@@ -1,4 +1,4 @@
-\#+TITLE: Emacs Configuration
+#+TITLE: Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle .emacs.d/init.el
 #+STARTUP: overview
 * Setup
@@ -712,18 +712,6 @@ After changing venv all installed packages from venv should be visible for LSP s
 #+end_src
 
 * Org-Mode
-** Inline latex
-Note: I had to install texlive dependencies for latex framents to work. I found what needed to be installed by running =pdflatex= on the generated tex file in =/tmp/= created by org.
-*** Font size
-Create a function to align the size of displayed latex framents with overall org-mode font size.
-#+begin_src emacs-lisp
-(defun update-org-latex-fragments ()
-  (org-latex-preview '(64))
-  (plist-put org-format-latex-options :scale (* 1.3 text-scale-mode-amount))
-  (org-latex-preview '(16)))
-(add-hook 'text-scale-mode-hook 'update-org-latex-fragments)
-#+end_src
-
 ** Mode setup
 #+begin_src emacs-lisp 
   (defun jmn/org-mode-setup ()
@@ -843,6 +831,25 @@ Create a function to align the size of displayed latex framents with overall org
 
 #+RESULTS:
 : ((sh . src shell) (cppnm . src C++  :main no) (cpp . src C++  :includes <iostream>) (py . src python  :results output) (el . src emacs-lisp) (la . src latex) (a . export ascii) (c . center) (C . comment) (e . example) (E . export) (h . export html) (l . export latex) (q . quote) (s . src) (v . verse))
+
+** Inline latex
+Note: I had to install texlive dependencies for latex framents to work. I found what needed to be installed by running =pdflatex= on the generated tex file in =/tmp/= created by org.
+
+*Font size*:
+#+begin_src emacs-lisp
+  (defconst jmn-latex-scale 1.1 "scaling factor for latex fragments")
+  (setq org-format-latex-options (plist-put org-format-latex-options :scale jmn-latex-scale))
+#+end_src
+
+Create a function to align the size of displayed latex framents with overall org-mode font size.
+
+#+begin_src emacs-lisp
+    (defun update-org-latex-fragments ()
+      (org-latex-preview '(64))
+      (plist-put org-format-latex-options :scale (+ jmn-latex-scale  (* 0.2 text-scale-mode-amount)))
+      (org-latex-preview '(16)))
+    (add-hook 'text-scale-mode-hook 'update-org-latex-fragments)
+#+end_src
 
 ** Keybindings
 #+begin_src emacs-lisp
