--- a/emacs.org
+++ b/emacs.org
@@ -1,6 +1,7 @@
 #+TITLE: Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle .emacs.d/init.el
 #+STARTUP: overview
+#+OPTIONS: toc:2
 * Setup
 ** Auto-tangle
 This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-config= gets executed each time such a buffer gets saved.  This function checks to see if the file being saved is the Emacs.org file you're looking at right now, and if so, automatically exports the configuration here to the associated output files.
@@ -351,7 +352,7 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
 #+end_src
 
 ** lsp-grammarly
-Gives warning on startup for login.    [[ https://github.com/emacs-grammarly/lsp-grammarly][lsp-grammarly doc]]
+Gives warning on startup for login.   [[https://github.com/emacs-grammarly/lsp-grammarly][lsp-grammarly doc]
 #+begin_src emacs-lisp  :tangle no
   (use-package lsp-grammarly
   :ensure t
@@ -780,28 +781,29 @@ After changing venv all installed packages from venv should be visible for LSP s
 
 ** Org-babel
 #+begin_src emacs-lisp
-  (org-babel-do-load-languages 'org-babel-load-languages
-                                 (append org-babel-load-languages
-                                  '((python . t)
-                                    (latex  . t)
-                                    (C      . t))))
+                  (org-babel-do-load-languages 'org-babel-load-languages
+                                                 (append org-babel-load-languages
+                                                  '((python . t)
+                                                    (latex  . t)
+                                                    (C      . t))))
 
-  (setq org-confirm-babel-evaluate nil)
+                  (setq org-confirm-babel-evaluate nil)
 
-  (with-eval-after-load 'org
-    ;; This is needed as of Org 9.2
-    (require 'org-tempo)
-    (add-to-list 'org-structure-template-alist '("la" . "src latex"))
-    (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
-    (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
-    (add-to-list 'org-structure-template-alist '("py" . "src python  :results output"))
-    (add-to-list 'org-structure-template-alist '("cpp" . "src C++  :includes <iostream>"))
-    (add-to-list 'org-structure-template-alist '("cppnm" . "src C++  :main no"))
-  )
+                  (with-eval-after-load 'org
+                    ;; This is needed as of Org 9.2
+                    (require 'org-tempo)
+                    (add-to-list 'org-structure-template-alist '("la" . "src latex"))
+                    (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
+                    (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
+                    (add-to-list 'org-structure-template-alist '("py" . "src python  :results output"))
+                    (add-to-list 'org-structure-template-alist '("pyim" . "src python :results file :var f=REPLACE
+    import matplotlib.pyplot as plt
+    plt.savefig(f)
+    return f"))
+                    (add-to-list 'org-structure-template-alist '("cpp" . "src C++  :includes <iostream>"))
+                    (add-to-list 'org-structure-template-alist '("cppnm" . "src C++  :main no")))
 #+end_src
 
-#+RESULTS:
-: ((sh . src shell) (cppnm . src C++  :main no) (cpp . src C++  :includes <iostream>) (py . src python  :results output) (el . src emacs-lisp) (la . src latex) (a . export ascii) (c . center) (C . comment) (e . example) (E . export) (h . export html) (l . export latex) (q . quote) (s . src) (v . verse))
 
 ** Inline latex
 Note: I had to install texlive dependencies for latex framents to work. I found what needed to be installed by running =pdflatex= on the generated tex file in =/tmp/= created by org.
