add babel shell and Drobpox/bin to path

--- a/emacs.org
+++ b/emacs.org
@@ -781,29 +781,35 @@ After changing venv all installed packages from venv should be visible for LSP s
 
 ** Org-babel
 #+begin_src emacs-lisp
-                  (org-babel-do-load-languages 'org-babel-load-languages
-                                                 (append org-babel-load-languages
-                                                  '((python . t)
-                                                    (latex  . t)
-                                                    (C      . t))))
+                    (org-babel-do-load-languages 'org-babel-load-languages
+                                                   (append org-babel-load-languages
+                                                    '((shell  . t)
+                                                      (python . t)
+                                                      (latex  . t)
+                                                      (C      . t))))
 
-                  (setq org-confirm-babel-evaluate nil)
+                    (setq org-confirm-babel-evaluate nil)
 
-                  (with-eval-after-load 'org
-                    ;; This is needed as of Org 9.2
-                    (require 'org-tempo)
-                    (add-to-list 'org-structure-template-alist '("la" . "src latex"))
-                    (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
-                    (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
-                    (add-to-list 'org-structure-template-alist '("py" . "src python  :results output"))
-                    (add-to-list 'org-structure-template-alist '("pyim" . "src python :results file :var f=REPLACE
-    import matplotlib.pyplot as plt
-    plt.savefig(f)
-    return f"))
-                    (add-to-list 'org-structure-template-alist '("cpp" . "src C++  :includes <iostream>"))
-                    (add-to-list 'org-structure-template-alist '("cppnm" . "src C++  :main no")))
+                    (with-eval-after-load 'org
+                      ;; This is needed as of Org 9.2
+                      (require 'org-tempo)
+                      (add-to-list 'org-structure-template-alist '("la" . "src latex"))
+                      (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
+                      (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
+                      (add-to-list 'org-structure-template-alist '("py" . "src python  :results output"))
+                      (add-to-list 'org-structure-template-alist '("pyim" . "src python :results file :var f=REPLACE
+      import matplotlib.pyplot as plt
+      plt.savefig(f)
+      return f"))
+                      (add-to-list 'org-structure-template-alist '("cpp" . "src C++  :includes <iostream>"))
+                      (add-to-list 'org-structure-template-alist '("cppnm" . "src C++  :main no")))
 #+end_src
 
+#+RESULTS:
+: ((cppnm . src C++  :main no) (cpp . src C++  :includes <iostream>) (pyim . src python :results file :var f=REPLACE
+: import matplotlib.pyplot as plt
+: plt.savefig(f)
+: return f) (py . src python  :results output) (el . src emacs-lisp) (sh . src shell) (la . src latex) (a . export ascii) (c . center) (C . comment) (e . example) (E . export) (h . export html) (l . export latex) (q . quote) (s . src) (v . verse))
 
 ** Inline latex
 Note: I had to install texlive dependencies for latex framents to work. I found what needed to be installed by running =pdflatex= on the generated tex file in =/tmp/= created by org.
