suppress native compilation warnings

--- a/emacs.org
+++ b/emacs.org
@@ -47,8 +47,7 @@ The auto-package-update package helps us keep Emacs packages up to date.  It wil
 
 You can also use =M-x auto-package-update-now= to update right now!
 
-#+begin_src emacs-lisp 
-
+#+begin_src emacs-lisp
   (use-package auto-package-update
     :custom
     (auto-package-update-interval 30)
@@ -247,6 +246,12 @@ For the icons to display correctly, I needed to =all-of-the-icons-install-fonts=
 
     (setq dashboard-set-footer nil)
     )
+#+end_src
+
+** Native Compilation
+*** Suppress compilation warnings
+#+begin_src emacs-lisp
+  (setq native-comp-async-report-warnings-errors nil)
 #+end_src
 
 ** Goto last change
